Cambios en CXC y CXP

--- a/ADMFacturar/Views/CXC/Detalles.cshtml
+++ b/ADMFacturar/Views/CXC/Detalles.cshtml
@@ -2,7 +2,7 @@
 @model AbonoCXC
 
 @{
-    var abonos = ViewData["Abonos"] as List<AbonoCXC>;
+    var abonos = ViewData["AbonosCXC"] as List<AbonoCXC>;
 }
 
 <!DOCTYPE html>
