--- a/ADMFacturar/Views/CXC/Abono.cshtml
+++ b/ADMFacturar/Views/CXC/Abono.cshtml
@@ -23,8 +23,12 @@
             <h2 class="text-lg font-semibold leading-7 text-white">Creación de nuevo Abono</h2>
         </div>
         <div class="mt-6 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-2 lg:grid-cols-3">
-
-
+            <div>
+                <label for="Numero_Abono" class="block text-sm font-medium text-gray-300">Número Abono</label>
+                <div class="mt-2">
+                    <input asp-for="Numero_Abono" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
+                </div>
+            </div>
             <div>
                 <label for="FK_Documento" class="block text-sm font-medium text-gray-300">Documento</label>
                 <div class="mt-2">
@@ -47,12 +51,6 @@
                 <label for="Tipo_Pago" class="block text-sm font-medium text-gray-300">Tipo Pago</label>
                 <div class="mt-2">
                     <input asp-for="Tipo_Pago" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
-                    <select class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px; height: 35px;">
-                        <option>Transferencia</option>
-                        <option>Efectivo</option>
-                        <option>Cheque</option>
-                        <option>Sinpe</option>
-                    </select>
                 </div>
             </div>
             <div>
