--- a/ADMFacturar/Views/CXP/Index.cshtml
+++ b/ADMFacturar/Views/CXP/Index.cshtml
@@ -2,7 +2,7 @@
 @model CXP
 
 @{
-    var cxps = ViewData["CXP"] as List<CXP>;
+	var cxps = ViewData["CXP"] as List<CXP>;
 }
 
 
@@ -12,158 +12,182 @@
 <!DOCTYPE html>
 <html lang="en">
 <body>
-    <link href="~/css/custom.css" rel="stylesheet" />
-    <script>
-        // Función para abrir la modal
-        function abrirModal(idModal) {
-            var modal = document.getElementById(idModal);
-            modal.style.display = "block";
-        }
+	<link href="~/css/custom.css" rel="stylesheet" />
+	<script>
+		// Función para abrir la modal
+		function abrirModal(idModal) {
+			var modal = document.getElementById(idModal);
+			modal.style.display = "block";
+		}
 
-        // Cierra la modal cuando el usuario hace clic en el botón de cerrar (x)
-        var modals = document.getElementsByClassName("modal");
-        for (var i = 0; i < modals.length; i++) {
-            var modal = modals[i];
-            var closeButton = modal.getElementsByClassName("close")[0];
-            closeButton.onclick = function () {
-                modal.style.display = "none";
-            }
-        }
+		// Cierra la modal cuando el usuario hace clic en el botón de cerrar (x)
+		var modals = document.getElementsByClassName("modal");
+		for (var i = 0; i < modals.length; i++) {
+			var modal = modals[i];
+			var closeButton = modal.getElementsByClassName("close")[0];
+			closeButton.onclick = function () {
+				modal.style.display = "none";
+			}
+		}
 
-        // Cierra la modal cuando el usuario hace clic fuera de ella
-        window.onclick = function (event) {
-            for (var i = 0; i < modals.length; i++) {
-                var modal = modals[i];
-                if (event.target == modal) {
-                    modal.style.display = "none";
-                }
-            }
-        }
-    </script>
+		// Cierra la modal cuando el usuario hace clic fuera de ella
+		window.onclick = function (event) {
+			for (var i = 0; i < modals.length; i++) {
+				var modal = modals[i];
+				if (event.target == modal) {
+					modal.style.display = "none";
+				}
+			}
+		}
+	</script>
 
-    <div class="w-full">
-    </div>
-    <!--                  Inicio Form                        -->
-    <form>
-        <div class="bg-gray-800 text-white p-5 rounded-lg shadow-lg">
-            <h2 class="text-lg font-bold mb-4">Información Cuentas Por Pagar</h2>
-            <div class="grid grid-cols-1 gap-4 sm:grid-cols-6">
-                <!-- Fecha Inicio -->
-                <div class="sm:col-span-1">
-                    <label for="entry_date" class="block text-sm font-medium">Fecha Inicio</label>
-                    <div class="mt-2">
-                        <input type="date" id="entry_date" name="entry_date" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
-                    </div>
-                </div>
-                <!-- Fecha Final -->
-                <div class="sm:col-span-1">
-                    <label for="expiry_date" class="block text-sm font-medium">Fecha Final</label>
-                    <div class="mt-2">
-                        <input type="date" id="expiry_date" name="expiry_date" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
-                    </div>
-                </div>
-                <!-- Estado -->
-                <div class="sm:col-span-1">
-                    <label for="estado" class="block text-sm font-medium">Estado</label>
-                    <div class="mt-2">
-                        <select id="estado" name="estado" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px; height: 38px;">
-                            <option value="">Seleccione un estado</option>
-                            <option value="completado">Completado</option>
-                            <option value="pendiente">Pendiente</option>
-                        </select>
-                    </div>
-                </div>
-                <!-- Proveedor -->
-                <div class="sm:col-span-1">
-                    <label for="PK_FK_Proveedor" class="block text-sm font-medium">Proveedor</label>
-                    <div class="mt-2">
-                        <select @* asp-for="FK_Proveedor" *@ id="PK_FK_Proveedor" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px; height: 38px;">
-                            <option value="">Seleccione un proveedor</option>
-                            @*  @if (proveedores != null)
-                            {
-                                @foreach (var proveedor in proveedores)
-                                {
-                                    <option value="@proveedor.PK_Proveedor">@proveedor.Nombre</option>
-                                }
-                            }  *@
-                        </select> 
-                    </div>
-                </div>
-                <!-- Número de Documento -->
-                <div class="sm:col-span-1">
-                    <label for="document_number" class="block text-sm font-medium">Número de Documento</label>
-                    <div class="mt-2">
-                        <input type="text" id="document_number" name="document_number" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 17px;">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </form>
+	<div class="w-full">
+	</div>
+	<!--                  Inicio Form                        -->
+	<form>
+		<div class="bg-gray-800 text-white p-5 rounded-lg shadow-lg">
+			<h2 class="text-lg font-bold mb-4">Información Cuentas Por Pagar</h2>
+			<div class="grid grid-cols-1 gap-4 sm:grid-cols-6">
+				<!-- Fecha Inicio -->
+				<div class="sm:col-span-1">
+					<label for="entry_date" class="block text-sm font-medium leading-6 text-white">Fecha Inicio</label>
+					<div class="mt-2">
+						<input type="date" id="entry_date" name="entry_date" class="block w-full rounded-md bg-gray-700 border-0 py-1.5 text-white focus:ring-2 focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
+					</div>
+				</div>
+				<!-- Fecha Final -->
+				<div class="sm:col-span-1">
+					<label for="expiry_date" class="block text-sm font-medium leading-6 text-white">Fecha Final</label>
+					<div class="mt-2">
+						<input type="date" id="expiry_date" name="expiry_date" class="block w-full rounded-md bg-gray-700 border-0 py-1.5 text-white focus:ring-2 focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
+					</div>
+				</div>
+				<!-- Estado -->
+				<div class="sm:col-span-1">
+					<label for="estado" class="block text-sm font-medium leading-6 text-white">Estado</label>
+					<div class="mt-2">
+						<select id="estado" name="estado" class="block w-full rounded-md bg-gray-700 border-0 py-1.5 text-white focus:ring-2 focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px; height: 38px;">
+							<option value="">Seleccione un estado</option>
+							<option value="completado">Completado</option>
+							<option value="pendiente">Pendiente</option>
+						</select>
+					</div>
+				</div>
+				<!-- Proveedor -->
+				<div class="sm:col-span-1">
+					<label for="PK_FK_Proveedor" class="block text-sm font-medium leading-6 text-white">Proveedor</label>
+					<div class="mt-2">
+						<select @* asp-for="FK_Proveedor" *@ id="PK_FK_Proveedor" class="block w-full rounded-md bg-gray-700 border-0 py-1.5 text-white focus:ring-2 focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px; height: 38px;">
+							<option value="">Seleccione un proveedor</option>
+							@*  @if (proveedores != null)
+							{
+							@foreach (var proveedor in proveedores)
+							{
+							<option value="@proveedor.PK_Proveedor">@proveedor.Nombre</option>
+							}
+							}  *@
+						</select>
+					</div>
+				</div>
+				<!-- Número de Documento -->
+				<div class="sm:col-span-1">
+					<label for="document_number" class="block text-sm font-medium leading-6 text-white">Número de Documento</label>
+					<div class="mt-2">
+						<input type="text" id="document_number" name="document_number" class="block w-full rounded-md bg-gray-700 border-0 py-1.5 text-white focus:ring-2 focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
+					</div>
+				</div>
+			</div>
+		</div>
+	</form>
 
-    <br>
-    <br>
+	<br>
+	<br>
 
-    <!--                  Final Form                        -->
+	<!--                  Final Form                        -->
+	<!--                  Inicio de Tabla                        -->
 
+	<div class="w-full mt-8 bg-gray-800 p-6 rounded-lg shadow-lg">
+		<div class="flex justify-between items-center bg-gray-800 text-white p-4 rounded-t-lg">
+			<h3 class="text-xl font-semibold"><i class="fas fa-list mr-3"></i> Listado de Cuentas por Pagar</h3>
 
-    <!--                  Inicio de Tabla                        -->
-
-    <div class="w-full">
-        <div class="flex justify-between items-center bg-gray-800 text-white p-4 rounded-t-lg">
-            <h3 class="text-xl font-semibold"><i class="fas fa-list mr-3"></i> Listado de Cuentas por Pagar</h3>
-
-        </div>
+		</div>
 
 
-    <div class="bg-white rounded-b-lg shadow-lg overflow-hidden">
-        <table id="tablaVendedores" class="min-w-full leading-normal">
-            <thead>
-                <tr class="bg-gray-800 text-white">
-                    <th class="text-center py-3">Documento</th>
-                    <th class="text-center py-3">Proveedor</th>
-                    <th class="text-center py-3">Fecha Emisión</th>
-                    <th class="text-center py-3">Total</th>
-                    <th class="text-center py-3">Saldo</th>
-                    <th class="text-center py-3">Acciones</th>
-                </tr>
-            </thead>
-            <tbody id="bodyTablaCXP" class="text-gray-700">
-                @if (cxps != null)
-                {
-                    @foreach (var cxp in cxps)
-                    {
-                        <tr class="border-b border-gray-200 hover:bg-gray-100">
-                            <td class="py-3 text-center">@Html.DisplayFor(modelItem => cxp.PK_Documento)</td>
-                            <td class="py-3 text-center">@Html.DisplayFor(modelItem => cxp.FK_Proveedor)</td>
-                            <td class="py-3 text-center">@Html.Raw(cxp.Fecha_Documento.ToString("dd/MM/yyyy"))</td>
-                            <td class="py-3 text-center">@Html.DisplayFor(modelItem => cxp.Monto)</td>
-                            <td class="py-3 text-center">@Html.DisplayFor(modelItem => cxp.Saldo_Pendiente)</td>
-                                <td>
-                                    <div class="flex justify-center space-x-2">
-@*                                         <button class="btn btnCrear" title="Crear Abono" onclick="abrirModal('modalCrearAbono')">
-                                            <svg class="svg-inline--fa fa-times fa-w-16" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="times" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32V224H48c-17.7 0-32 14.3-32 32s14.3 32 32 32H192V432c0 17.7 14.3 32 32 32s32-14.3 32-32V288H400c17.7 0 32-14.3 32-32s-14.3-32-32-32H256V80z" /></svg>
-                                        </button> *@
-                                        <a asp-action="Abono" asp-route-PK="@cxp.PK_Documento" class="btn btnCrear" title="Crear Abono">
-                                            <svg class="svg-inline--fa fa-times fa-w-16" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="times" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32V224H48c-17.7 0-32 14.3-32 32s14.3 32 32 32H192V432c0 17.7 14.3 32 32 32s32-14.3 32-32V288H400c17.7 0 32-14.3 32-32s-14.3-32-32-32H256V80z" /></svg>
-                                        </a>
-                                        <a asp-action="Detalles" asp-route-PK="@cxp.PK_Documento" class="btn VerDetalles" title="Detalles">
-                                            <svg class="svg-inline--fa fa-eye fa-w-16" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="eye" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" data-fa-i2svg=""><path fill="currentColor" d="M572.52 241.4C518.29 135.59 410.93 64 288 64S57.68 135.64 3.48 241.41a32.35 32.35 0 0 0 0 29.19C57.71 376.41 165.07 448 288 448s230.32-71.64 284.52-177.41a32.35 32.35 0 0 0 0-29.19zM288 400a144 144 0 1 1 144-144 143.93 143.93 0 0 1-144 144zm0-240a95.31 95.31 0 0 0-25.31 3.79 47.85 47.85 0 0 1-66.9 66.9A95.78 95.78 0 1 0 288 160z"></path> </svg>
-                                        </a>
-                                    </div>
-                                </td>
-                        </tr>
-                    }
-                }
-                else
-                {
-                    <tr>
-                        <td colspan="14">No hay datos disponibles.</td>
-                    </tr>
-                }
-            </tbody>
-        </table>
-    </div>
+		<div class="overflow-auto mt-4">
+			<table id="tablaCXC" class="min-w-full bg-gray-800 text-white">
+				<thead class="bg-gray-900">
+					<tr>
+						<th class="py-3 px-4 text-center">Documento</th>
+						<th class="py-3 px-4 text-center">Proveedor</th>
+						<th class="py-3 px-4 text-center">Fecha Emisión</th>
+						<th class="py-3 px-4 text-center">Total</th>
+						<th class="py-3 px-4 text-center">Saldo</th>
+						<th class="py-3 px-4 text-center">Acciones</th>
+					</tr>
+				</thead>
+				<tbody id="bodyTablaCXP" class="text-center">
+					@if (cxps != null)
+					{
+						@foreach (var cxp in cxps)
+						{
+							<tr class="even:bg-gray-700 hover:bg-gray-600">
+								<td class="py-3 px-4 border-b border-gray-700">@Html.DisplayFor(modelItem => cxp.PK_Documento)</td>
+								<td class="py-3 px-4 border-b border-gray-700">@Html.DisplayFor(modelItem => cxp.FK_Proveedor)</td>
+								<td class="py-3 px-4 border-b border-gray-700">@Html.Raw(cxp.Fecha_Documento.ToString("dd/MM/yyyy"))</td>
+								<td class="py-3 px-4 border-b border-gray-700">@Html.DisplayFor(modelItem => cxp.Monto)</td>
+								<td class="py-3 px-4 border-b border-gray-700">@Html.DisplayFor(modelItem => cxp.Saldo_Pendiente)</td>
+								<td>
+									<div class="py-3 px-4 border-b border-gray-700 flex justify-center space-x-2">
+										@*                                         <button class="btn btnCrear" title="Crear Abono" onclick="abrirModal('modalCrearAbono')">
+								<svg class="svg-inline--fa fa-times fa-w-16" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="times" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32V224H48c-17.7 0-32 14.3-32 32s14.3 32 32 32H192V432c0 17.7 14.3 32 32 32s32-14.3 32-32V288H400c17.7 0 32-14.3 32-32s-14.3-32-32-32H256V80z" /></svg>
+								</button> *@
+										<a asp-action="Abono" asp-route-PK="@cxp.PK_Documento" class="btn btnCrear" title="Crear Abono">
+											<svg class="svg-inline--fa fa-times fa-w-16" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="times" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32V224H48c-17.7 0-32 14.3-32 32s14.3 32 32 32H192V432c0 17.7 14.3 32 32 32s32-14.3 32-32V288H400c17.7 0 32-14.3 32-32s-14.3-32-32-32H256V80z" /></svg>
+										</a>
+										<a asp-action="Detalles" asp-route-PK="@cxp.PK_Documento" class="btn VerDetalles" title="Detalles">
+											<svg class="svg-inline--fa fa-eye fa-w-16" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="eye" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" data-fa-i2svg=""><path fill="currentColor" d="M572.52 241.4C518.29 135.59 410.93 64 288 64S57.68 135.64 3.48 241.41a32.35 32.35 0 0 0 0 29.19C57.71 376.41 165.07 448 288 448s230.32-71.64 284.52-177.41a32.35 32.35 0 0 0 0-29.19zM288 400a144 144 0 1 1 144-144 143.93 143.93 0 0 1-144 144zm0-240a95.31 95.31 0 0 0-25.31 3.79 47.85 47.85 0 0 1-66.9 66.9A95.78 95.78 0 1 0 288 160z"></path> </svg>
+										</a>
+									</div>
+								</td>
+							</tr>
+						}
+					}
+					else
+					{
+						<tr>
+							<td colspan="14">No hay datos disponibles.</td>
+						</tr>
+					}
+				</tbody>
+			</table>
+		</div>
 
-    <!--                  Final Tabla                        -->
+		<!--                  Final Tabla                        -->
+
+		<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+		<script>
+			//Funcion para paginar en index
+			$(document).ready(function () {
+				$('#tablaCXC').DataTable({
+					"paging": true, // Habilita la paginación
+					"pagingType": "simple_numbers", // Tipo de paginación
+					"lengthMenu": [[10, 25, 50, -1], [10, 25, 50, "Todos"]], // Opciones de cantidad de registros por página
+					"searching": false, // Deshabilita la caja de búsqueda
+					"language": {
+						"lengthMenu": " Mostrar _MENU_ registros por página",
+						"zeroRecords": "No se encontraron resultados",
+						"info": " Mostrando página _PAGE_ de _PAGES_",
+						"infoEmpty": "No hay registros disponibles",
+						"infoFiltered": "(filtrado de _MAX_ registros totales)",
+						"paginate": {
+							"first": "Primero",
+							"last": "Último",
+							"next": "Siguiente",
+							"previous": "Anterior"
+						}
+					}
+				});
+			});
+		</script>
 </body>
 </html>
